# Photorafy

./: .gitignore  C213_A1_Part2_S22_20240595_20240466_20240030.cpp  CMakeLists.txt  CS213_A1_Part1_23_20240595_20240466_20240030.cpp  CS213_A1_Part2_S22_20240595_20240466_20240030.cpp  Darken and Lighten Image  Edges  Edges.cpp  Flip img V.cpp  Grayscale  ImageEditor.h  Merge image  black &white.cpp  crop.cpp  filer16(purple)  filer16(purple).cpp  filter13(sunrays)  filter13(sunrays).cpp  flip img H.cpp  gui.cpp  main.cpp  oil img.cpp  readme.md  readme.txt
demo/: ImageProcessingDemo.cpp
imgui/: ImGuiFileDialog.h
lib/: ImageEditor.cpp  ImageEditor.h
